# special-rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  rustfmt.toml
src/: constants.rs  lib.rs
src/special/: bernoulli.rs  combinatorics.rs  factorial.rs  gamma.rs  mod.rs  tangent_num.rs  tools.rs  zigzag.rs
src/special/beta/: beta_trait.rs  beta_util.rs  mod.rs  r_beta.rs  r_lbeta.rs
src/special/erf/: erf_trait.rs  mod.rs  r_erf.rs  r_erf_inv.rs
src/special/gamma/: c_gamma.rs  gamma.rs  gamma_trait.rs  gamma_util.rs  mod.rs  r_gamma.rs  r_gammainc.rs  r_gammaln.rs  r_gammasgn.rs  r_lgamma.rs  r_poch.rs  r_rgamma.rs  real_gamma.rs
src/traits/: float_const.rs  generic_int.rs  mod.rs
