[package]
name = "sci-rs"
version = "0.1.0"
edition = "2021"
authors = ["Matthew R. Hennefarth"]
description = "Scientific library written in pure Rust"
homepage = "https://github.com/matthew-hennefarth/sci-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["algorithms", "science"]
keywords = ["mathematics", "physics", "science", "numerics"]

[dependencies]
num-traits = "0.2"
num-complex = "0.4.3"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "docs-header.html" ]
